--- a/styles/labfour.css
+++ b/styles/labfour.css
@@ -234,7 +234,7 @@ p {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: auto;
 }
 
   .footer-header {
